hard-gists/715284/run.log
=== Docker Run Log for 715284 ===
Started at: Mi 29. Okt 17:01:21 CET 2025

[2025-10-29 17:01:21] START: Running container for 715284
[2025-10-29 17:01:21] SUCCESS: Container bfd182b1afea0058bc9baf7eaa01659ac1328074dfb326ea1389df801583359e started for 715284
=== Container logs for 715284 ===
  File "/snippet.py", line 23
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 715284 ===
[2025-10-29 17:01:24] INFO: Container bfd182b1afea0058bc9baf7eaa01659ac1328074dfb326ea1389df801583359e has stopped
